--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "username.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://username.github.io",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.6.1",
